<resources>
    <string name="app_name">Debt Collector</string>
    <string name="image_logo">image_logo</string>
    <string name="debt_collector_caps">DEBT COLLECTOR</string>
    <string name="text_motto">Best debt monitor app.</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here.</string>
    <string name="input_your_data">Input Your Data</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip_code">Zip Code</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="register_new_account">Register New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="password">Password</string>
    <string name="re_input_password">Re-input Password</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="image_other">Image other</string>
    <string name="input_your_text_here">Input your text here</string>
    <string name="send">Send</string>
    <string name="user_picture">user_picture</string>
    <string name="alamat_user">alamat_user</string>
    <string name="jumlah">Jumlah</string>
    <string name="jatuh_tempo">Jatuh Tempo</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="konfirmasi">KONFIRMASI HUTANG</string>
</resources>
