<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rizaldev.debtcollector.screens.login.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/image_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="27sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editTextUsername"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/editTextPassword"
            android:layout_alignRight="@id/editTextPassword"
            android:id="@+id/buttonLogin"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="end"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_here"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>

