<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rizaldev.debtcollector.screens.register.BiodataActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/image_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/input_your_data"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNameRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/registerText"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/editTextPhoneRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/editTextNameRegister"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/phone_numbers"
            android:inputType="phone"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/editTextAddressRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/editTextPhoneRegister"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/editTextCityRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/editTextAddressRegister"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/city"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/editTextProvinceRegister"
            android:layout_width="119dp"
            android:layout_height="40dp"
            android:layout_below="@id/editTextCityRegister"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/province"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/editTextZipcodeRegister"
            android:layout_width="119dp"
            android:layout_height="40dp"
            android:layout_below="@id/editTextCityRegister"
            android:layout_toEndOf="@id/editTextProvinceRegister"
            android:layout_toRightOf="@id/editTextProvinceRegister"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/zip_code"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="@color/colorBlack70"
            android:textColorHint="@color/colorGrey" />

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/editTextZipcodeRegister"
            android:layout_alignRight="@id/editTextZipcodeRegister"
            android:layout_below="@id/editTextZipcodeRegister"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/register" />

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/editTextProvinceRegister"
            android:layout_alignLeft="@id/editTextProvinceRegister"
            android:layout_below="@id/editTextZipcodeRegister"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/back" />

    </RelativeLayout>

</LinearLayout>
