<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rizaldev.debtcollector.screens.splash.SplashActivity">


    <ImageView
        android:layout_width="200dp"
        android:id="@+id/image_splash_logo"
        android:layout_height="200dp"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/image_logo"/>

    <TextView
        android:id="@+id/text_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/debt_collector_caps"
        android:textColor="@color/colorWhite"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_motto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/text_motto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
