<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.rizaldev.debtcollector.screens.utang_baru.UtangBaruActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="382dp"
        android:layout_height="143dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_picture"
            android:maxHeight="90dp"
            android:maxWidth="90dp"
            android:src="@drawable/roundshape" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView"
            android:layout_marginLeft="38dp"
            android:layout_marginStart="38dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/colorBlack70"
            android:textSize="25sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginBottom="11dp"
            android:gravity="center"
            android:text="@string/alamat_user"
            android:textColor="@color/colorBlack70"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="345dp"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="17dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/jumlah"
            android:textColor="@color/colorBlack70"
            android:textSize="20sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginTop="11dp"
            android:text="@string/lorem_ipsum"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="32dp"
            android:text="@string/jatuh_tempo"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorBlack70"
            android:textSize="20sp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_centerVertical="true"
            android:text="@string/lorem_ipsum"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="32dp"
            android:text="@string/deskripsi"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorBlack70"
            android:textSize="20sp"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="12dp"
            android:text="@string/lorem_ipsum"
            android:id="@+id/textView6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_button"
            android:text="Konfirmasi Hutang"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:padding="8dp"
            />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
